--- a/style.css
+++ b/style.css
@@ -9725,12 +9725,10 @@ body {
   body.menu-active {
     overflow: hidden; }
 
-body {
-  overflow: hidden; }
-  body.mega-menu-header-menu .navbar-collapse {
-    display: block !important; }
-  body.mega-menu-header-menu .mobile-buttons {
-    display: none !important; }
+body.mega-menu-header-menu .navbar-collapse {
+  display: block !important; }
+body.mega-menu-header-menu .mobile-buttons {
+  display: none !important; }
 
 @media screen and (max-width: 991px) {
   main {
@@ -10288,6 +10286,9 @@ textarea {
 
 .admin-bar .form-progress {
   top: 32px; }
+
+.page-template-page-form section {
+  overflow: auto; }
 
 @font-face {
   font-family: "Outfit";
