--- a/assets/stylesheets/sections/_header.scss
+++ b/assets/stylesheets/sections/_header.scss
@@ -1,13 +1,13 @@
 section.header-navigation {
 	.navbar {
 		.navbar-collapse {
-			ul.navbar-nav  {
+			ul.navbar-nav {
 				font-size: 1.125rem;
 				li.menu-item {
 					&:not(.button-box) {
 						@include responsive(md-lg) {
-							padding-left: 1.25rem;
-							padding-right: 1.25rem;
+							padding-left: 1rem;
+							padding-right: 1rem;
 						}
 						a.nav-link {
 							color: var(--primary-color);
@@ -56,7 +56,7 @@ section.header-navigation {
 			@include responsive(xs-sm) {
 				position: fixed;
 				top: 101px !important;
-				height: calc(100% - 101px)!important;
+				height: calc(100% - 101px) !important;
 				width: 100%;
 				bottom: 0 !important;
 				padding-top: 0;
@@ -79,16 +79,14 @@ section.header-navigation {
 				}
 				@include responsive(xs) {
 					top: 99px !important;
-					height: calc(100% - 99px)!important;
+					height: calc(100% - 99px) !important;
 				}
 				@include responsive(mobile) {
 					top: 80.61px !important;
-					height: calc(100% - 80.61px)!important;
+					height: calc(100% - 80.61px) !important;
 				}
 			}
 		}
-
-
 	}
 	.site-logo {
 		img {
@@ -148,7 +146,6 @@ section.header-navigation {
 						top: 9px;
 					}
 				}
-
 			}
 		}
 	}
@@ -158,7 +155,6 @@ section.header-navigation {
 				max-width: 100%;
 			}
 		}
-		
 	}
 	& + .header-bottom {
 		position: relative;
@@ -170,27 +166,27 @@ section.header-navigation {
 			top: 0;
 			right: 0;
 			&.sticky {
-				position: fixed;		
-				@include box-shadow(0px 0px 5px 0px rgba(0,0,0,0.75));	
+				position: fixed;
+				@include box-shadow(0px 0px 5px 0px rgba(0, 0, 0, 0.75));
 			}
 		}
 		@include responsive(xs-sm) {
 			display: none;
 		}
 	}
-	
+
 	@include responsive(xs-sm) {
 		position: fixed;
 		top: 0;
 		left: 0;
 		right: 0;
 		z-index: 9999;
-		@include box-shadow(0px 0px 5px 0px rgba(0,0,0,0.75));	
+		@include box-shadow(0px 0px 5px 0px rgba(0, 0, 0, 0.75));
 	}
 }
 
 section.header-icon-list {
-	[class*='container'] {
+	[class*="container"] {
 		@include responsive(xs-sm) {
 			padding: 0;
 			max-width: 100%;
@@ -239,7 +235,6 @@ section.header-icon-list {
 					padding-left: 1rem;
 					padding-right: 1rem;
 				}
-
 			}
 			@include responsive(xs-sm) {
 				border: 1px solid var(--white-color);
@@ -257,24 +252,22 @@ section.header-icon-list {
 			.navbar-collapse {
 				@include responsive(xs-sm) {
 					top: calc(101px + 32px) !important;
-					height: calc(100% - 101px - 32px)!important;
-					@media(max-width: 782px) {
+					height: calc(100% - 101px - 32px) !important;
+					@media (max-width: 782px) {
 						top: calc(99px + 46px) !important;
-						height: calc(100% - 99px - 46px)!important;
+						height: calc(100% - 99px - 46px) !important;
 					}
 					@include responsive(mobile) {
 						top: calc(80.61px + 46px) !important;
-						height: calc(100% - 80.61px - 46px)!important;
+						height: calc(100% - 80.61px - 46px) !important;
 					}
 				}
 			}
-			
-
 		}
 		& + .header-bottom {
 			.header-bottom-holder {
 				&.sticky {
-					position: fixed;	
+					position: fixed;
 					margin-top: 32px;
 				}
 			}
@@ -286,7 +279,7 @@ section.header-icon-list {
 		@include responsive(xs-sm) {
 			top: 32px;
 		}
-		@media(max-width: 782px) {
+		@media (max-width: 782px) {
 			top: 46px;
 		}
 	}
