--- a/style.css
+++ b/style.css
@@ -10005,7 +10005,8 @@ textarea {
         margin-bottom: 0;
         border-bottom: 2px solid var(--accent-color);
         display: inline;
-        line-height: 2; } }
+        line-height: 1.3;
+        font-size: 20px; } }
   @media screen and (min-width: 992px) {
     .grid-box .grid-inner:before, .grid-box .grid-inner:after {
       content: "";
@@ -10036,7 +10037,8 @@ textarea {
     width: 100%; }
   @media screen and (max-width: 991px) {
     .grid-box:hover .grid-inner .background-image:before, .grid-box:active .grid-inner .background-image:before, .grid-box:focus .grid-inner .background-image:before {
-      opacity: 0.65 !important; } }
+      opacity: 0.65 !important;
+      top: 0 !important; } }
 
 .image-info-box {
   max-width: 300px;
