--- a/style.css
+++ b/style.css
@@ -10010,6 +10010,9 @@ textarea {
         display: inline;
         line-height: 1.3;
         font-size: 20px; } }
+  @media screen and (max-width: 575px) {
+    .grid-box .grid-inner h2 {
+      font-size: 15px; } }
   @media screen and (min-width: 992px) {
     .grid-box .grid-inner:before, .grid-box .grid-inner:after {
       content: "";
@@ -10033,6 +10036,9 @@ textarea {
       -o-transition: 500ms;
       transition: 500ms;
       right: 0; } }
+  @media screen and (max-width: 575px) {
+    .grid-box .grid-inner {
+      padding: 1rem; } }
   @media screen and (max-width: 991px) {
     .grid-box {
       padding: 50%; } }
