--- a/style.css
+++ b/style.css
@@ -11013,6 +11013,9 @@ section.footer-navigation {
 /*-----------------------------------------------------------------------------------*/
 section.image-info-boxes .row [class*="col-"]:not(:last-child) .column-holder {
   position: relative; }
+  @media (mobile) {
+    section.image-info-boxes .row [class*="col-"]:not(:last-child) .column-holder h3 {
+      font-size: 20px; } }
   section.image-info-boxes .row [class*="col-"]:not(:last-child) .column-holder:before {
     content: "next";
     font-family: swiper-icons;
