--- a/assets/stylesheets/sections/_sections.scss
+++ b/assets/stylesheets/sections/_sections.scss
@@ -167,3 +167,336 @@ section.two-column-image-text {
 		border-radius: 20px;
 	}
 }
+
+
+section.archive-banner {
+	background-color: transparent;
+	.description-box {
+		max-width: 700px;
+		p {
+			font-size: 20px;
+		}
+	}
+}
+
+section.archive-section {
+	min-height: 737px;
+	background-color: var(--gray-color-4);
+	.row {
+		--bs-gutter-x: 4%;
+		--bs-gutter-y: 4%;
+		[class*="col-"] {
+			@include responsive(md) {
+				width: 50%;
+			}
+		}
+		.post-holder {
+			background-color: var(--white-color);
+			height: 100%;
+			@include box-shadow(0px 39px 25px #0000000d);
+			position: relative;
+			a {
+				text-decoration: none;
+			}
+
+			.content-holder {
+				padding: 40px 120px 80px 40px;
+				position: relative;
+				a {
+					color: var(--black-color);
+				}
+
+				@include responsive(xs-md) {
+					padding: 40px 40px 100px 40px;
+				}
+				@include responsive(mobile) {
+					padding: 30px 30px 100px 30px;
+				}
+				&.has-logo {
+					.category-links {
+						padding-right: 40px;
+						@include responsive(xs-md) {
+							padding-right: 140px;
+						}
+					}
+				}
+				.category-links {
+					a {
+						@include responsive(xs-sm) {
+							font-size: 18px;
+						}
+					}
+				}
+			}
+			.heading-box {
+				h3 {
+					font-size: 25px;
+					@include responsive(xs-md) {
+						font-size: 22px;
+					}
+				}
+			}
+		}
+	}
+	.load-more {
+		margin-top: 140px;
+	}
+}
+section.loading-post {
+	input,
+	.load-more a,
+	.nice-select-js {
+		pointer-events: none;
+	}
+}
+
+section.archive-filter {
+	padding-top: 50px;
+	padding-bottom: 30px;
+	overflow: visible;
+	span.label {
+		color: #acacac;
+		margin-right: 20px;
+		@include responsive(xs-sm) {
+			display: none;
+		}
+	}
+}
+
+.nice-select {
+	&.nice-select-style-1 {
+		border: none;
+		font-size: 22px;
+		color: #282124;
+		padding: 0 35px 0 0;
+		color: var(--black-color);
+		float: none;
+		width: auto;
+		display: inline-block;
+		margin-top: -7px;
+		.list {
+			li {
+				font-size: 18px;
+			}
+		}
+		@include after {
+			border-color: var(--black-color);
+			width: 10px;
+			height: 10px;
+		}
+		@include responsive(mobile) {
+			font-size: 18px;
+		}
+	}
+	&.nice-select-transparent {
+		background-color: transparent;
+	}
+}
+
+select {
+	&.nice-select-js {
+		display: none;
+	}
+}
+
+.fa-spinner {
+	animation-name: spin;
+	animation-duration: 3000ms;
+	animation-iteration-count: infinite;
+	animation-timing-function: linear;
+}
+
+.loading-results {
+	text-align: center;
+	margin-top: 100px;
+	margin-bottom: 100px;
+	margin-left: auto;
+	margin-right: auto;
+	svg {
+		width: 50px;
+		height: 50px;
+	}
+}
+
+@keyframes spin {
+	from {
+		transform: rotate(0deg);
+	}
+	to {
+		transform: rotate(360deg);
+	}
+}
+
+.load-more a {
+	position: relative;
+	@include transition(300ms);
+	overflow: hidden;
+	display: inline-block;
+	padding-bottom: 2px;
+	span {
+		@include transition(300ms);
+	}
+	svg {
+		position: absolute;
+		right: -21px;
+	}
+	&.loading {
+		padding-right: 30px;
+		svg {
+			@include transform(translateX(0));
+			right: 0;
+		}
+	}
+}
+
+.underline-link {
+	text-decoration: none;
+	border-bottom: 2px solid var(--accent-color);
+	font-size: 20px;
+	color: var(--white-color);
+}
+
+.post-image-link {
+	position: relative;
+	display: block;
+	.date {
+		position: absolute;
+		bottom: 0;
+		padding: 15px 15px 15px 45px;
+		background-color: #001f2b;
+		color: #fff;
+		font-size: 16px;
+	}
+	.image-box {
+		position: relative;
+		padding: 30%;
+		overflow: hidden;
+		display: block !important;
+		img {
+			position: absolute;
+			left: 0;
+			top: 0;
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
+	}
+	.post-type {
+		position: absolute;
+		top: 15px;
+		left: 15px;
+		background-color: var(--black-color);
+		color: var(--white-color);
+		padding: 10px 20px;
+		border-radius: 20px;
+		font-size: 15px;
+		letter-spacing: 1px;
+	}
+}
+.arrow-box {
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	padding: 30px;
+	.arrow {
+		display: inline-block;
+		width: 30px;
+		height: 30px;
+		position: relative;
+	}
+	.arrow span {
+		display: block;
+		height: 1px;
+		background-color: #fff;
+		color: #fff;
+		text-decoration: none;
+		position: absolute;
+		top: 50%;
+		transform: translateY(-50%);
+		left: 0;
+		right: 0;
+		transition: all 500ms ease;
+	}
+	.arrow:before {
+		content: "";
+		border: solid #fff;
+		border-width: 0 1px 1px 0;
+		display: inline-block;
+		padding: 6px;
+		top: 8px;
+		position: absolute;
+	}
+	.arrow.right:before {
+		transform: rotate(-45deg);
+		-webkit-transform: rotate(-45deg);
+		right: 1px;
+	}
+	.arrow.white span {
+		background-color: #fff;
+		color: #fff;
+	}
+	.arrow.white:before {
+		border: solid #fff;
+		border-width: 0 1px 1px 0;
+	}
+	.arrow.left:before {
+		transform: rotate(130deg);
+		left: 1px;
+		-webkit-transform: rotate(130deg);
+	}
+	.arrow.hover:hover {
+		width: 50px;
+		right: -12px !important;
+	}
+	.arrow.hover:hover span {
+		left: 20px;
+		color: #282124;
+	}
+}
+.category-links.category-links {
+	margin-bottom: 40px;
+	a {
+		color: #a7a7a6 !important;
+		font-size: 21px;
+		@include not-last-child {
+			&:after {
+				content: ", ";
+			}
+		}
+	}
+}
+
+.single-post {
+	.underline-link {
+		color: var(--primary-color);
+		font-weight: bold;
+		padding-bottom: 10px;
+	}
+}
+
+section.the-content {
+	padding-top: 50px;
+	padding-bottom: 50px;
+	background-color: whitesmoke;
+	.image-box {
+		border-radius: 20px;
+		overflow: hidden;
+		position: static;
+	}
+
+	.container {
+		> * {
+			&:not(:last-child) {
+				margin-bottom: 1.5rem;
+			}
+		}
+		ul,
+		ol {
+			li {
+				&:not(:last-child) {
+					margin-bottom: 1rem;
+				}
+			}
+		}
+	}
+}
