--- a/style.scss
+++ b/style.scss
@@ -10,7 +10,10 @@ License: GNU General Public License
 /* Vendors
 /*-----------------------------------------------------------------------------------*/
 @import 'assets/vendors/bootstrap/bootstrap',
+'assets/vendors/nice-select/nice-select',
 'assets/vendors/aos/aos'
+
+
 ;
 /*-----------------------------------------------------------------------------------*/
 /* Utils
