--- a/style.css
+++ b/style.css
@@ -10179,7 +10179,8 @@ textarea {
   @media screen and (max-width: 991px) {
     .image-info-box .top-icon {
       margin-left: auto;
-      margin-right: auto; } }
+      margin-right: auto;
+      text-align: center; } }
   .image-info-box .main-image {
     position: relative;
     padding: 20%;
