--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -369,7 +369,7 @@ textarea {
         @include responsive(xs-sm) {
             margin-left: auto;
             margin-right: auto;
-            text-align: center;
+            text-align: center !important;
         }
     }
 
