--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -649,7 +649,7 @@ textarea {
     .fields-holder {
         margin-top: 100px;
         @include responsive(xs) {
-            margin-top: -;
+            margin-top: 0;
         }
     }
     .fields-holder,
