--- a/style.css
+++ b/style.css
@@ -11102,7 +11102,7 @@ section.header-icon-list ul li a {
 section.footer-logos {
   position: relative; }
   section.footer-logos:before {
-    content: '';
+    content: "";
     position: absolute;
     left: 0;
     top: 0;
@@ -11138,6 +11138,17 @@ section.footer-navigation {
     @media screen and (max-width: 1199px) {
       section.footer-navigation ul {
         justify-content: flex-start !important; } }
+
+#footerForm {
+  height: auto; }
+  #footerForm .fieldset-cf7mls-wrapper .fieldset-cf7mls {
+    display: flex;
+    align-items: center; }
+  #footerForm input {
+    border: none;
+    border-radius: 5px 0 0 5px; }
+  #footerForm button {
+    border-radius: 0 5px 5px 0; }
 
 /*-----------------------------------------------------------------------------------*/
 /* Sections
