--- a/assets/stylesheets/sections/_footer.scss
+++ b/assets/stylesheets/sections/_footer.scss
@@ -46,6 +46,9 @@ section.footer-navigation {
 
 #footerForm {
 	height: auto;
+	.form-wrapper {
+		max-width: 1320px;
+	}
 	.fieldset-cf7mls-wrapper {
 		.fieldset-cf7mls {
 			display: flex;
