--- a/style.css
+++ b/style.css
@@ -11153,6 +11153,19 @@ section.footer-navigation {
     border-radius: 5px 0 0 5px; }
   #footerForm .wpcf7 button {
     border-radius: 0 5px 5px 0; }
+  #footerForm .wpcf7 .footer-form-close {
+    color: var(--white-color);
+    background-color: var(--secondary-color);
+    border: none;
+    padding: 5px;
+    width: 32px;
+    height: 32px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px; }
+  #footerForm .wpcf7-not-valid-tip {
+    color: var(--secondary-color); }
 
 /*-----------------------------------------------------------------------------------*/
 /* Sections
