--- a/assets/stylesheets/sections/_footer.scss
+++ b/assets/stylesheets/sections/_footer.scss
@@ -81,6 +81,6 @@ section.footer-navigation {
 		border-radius: 5px;
 	}
 	.wpcf7-not-valid-tip {
-		color: var(--secondary-color);
+		color: var(--white-color);
 	}
 }
