--- a/style.css
+++ b/style.css
@@ -11165,7 +11165,7 @@ section.footer-navigation {
     justify-content: center;
     border-radius: 5px; }
   #footerForm .wpcf7-not-valid-tip {
-    color: var(--secondary-color); }
+    color: var(--white-color); }
 
 /*-----------------------------------------------------------------------------------*/
 /* Sections
