--- a/assets/stylesheets/sections/_footer.scss
+++ b/assets/stylesheets/sections/_footer.scss
@@ -70,8 +70,8 @@ section.footer-navigation {
 			border-radius: 0 5px 5px 0;
 		}
 		.cf7mls-btns {
-			min-height: auto;
-			margin: 0;
+			min-height: auto !important;
+			margin: 0 !important;
 		}
 	
 	}
