--- a/assets/stylesheets/sections/_footer.scss
+++ b/assets/stylesheets/sections/_footer.scss
@@ -53,6 +53,18 @@ section.footer-navigation {
 		.fieldset-cf7mls {
 			display: flex;
 			align-items: center;
+			flex-wrap: wrap;
+			.wpcf7-form-control-wrap {
+				flex: 0 0 70%;
+			}
+			.cf7mls-btns {
+				min-height: auto !important;
+				margin: 0 !important;
+				flex: 0 0 30%
+				button {
+					margin-bottom: 0;
+				}
+			}
 			&:not(.cf7mls_current_fs) {
 				display: none;
 			}
@@ -69,11 +81,6 @@ section.footer-navigation {
 		button {
 			border-radius: 0 5px 5px 0;
 		}
-		.cf7mls-btns {
-			min-height: auto !important;
-			margin: 0 !important;
-		}
-	
 	}
 	.footer-form-close {
 		color: var(--white-color);
@@ -87,7 +94,7 @@ section.footer-navigation {
 		justify-content: center;
 		border-radius: 5px;
 	}
-	.wpcf7-not-valid-tip {
+	.wpcf7-not-valid-tip, .wpcf7-response-output {
 		color: var(--white-color);
 	}
 }
