--- a/assets/stylesheets/sections/_footer.scss
+++ b/assets/stylesheets/sections/_footer.scss
@@ -56,11 +56,13 @@ section.footer-navigation {
 			flex-wrap: wrap;
 			.wpcf7-form-control-wrap {
 				flex: 0 0 70%;
+				width: 70%;
 			}
 			.cf7mls-btns {
 				min-height: auto !important;
 				margin: 0 !important;
-				flex: 0 0 30%
+				flex: 0 0 30%;
+				width: 30%;
 				button {
 					margin-bottom: 0;
 				}
@@ -77,6 +79,7 @@ section.footer-navigation {
 		input {
 			border: none;
 			border-radius: 5px 0 0 5px;
+			width: 100%;
 		}
 		button {
 			border-radius: 0 5px 5px 0;
@@ -94,7 +97,11 @@ section.footer-navigation {
 		justify-content: center;
 		border-radius: 5px;
 	}
-	.wpcf7-not-valid-tip, .wpcf7-response-output {
+	.wpcf7-not-valid-tip,
+	.wpcf7-response-output {
 		color: var(--white-color);
+	}
+	.wpcf7-not-valid-tip {
+		position: absolute;
 	}
 }
