--- a/style.css
+++ b/style.css
@@ -11148,19 +11148,23 @@ section.footer-navigation {
     align-items: center;
     flex-wrap: wrap; }
     #footerForm .fieldset-cf7mls-wrapper .fieldset-cf7mls .wpcf7-form-control-wrap {
-      flex: 0 0 70%; }
+      flex: 0 0 70%;
+      width: 70%; }
     #footerForm .fieldset-cf7mls-wrapper .fieldset-cf7mls .cf7mls-btns {
       min-height: auto !important;
       margin: 0 !important;
-      flex: 0 0 30% button;
-        flex-margin-bottom: 0; }
+      flex: 0 0 30%;
+      width: 30%; }
+      #footerForm .fieldset-cf7mls-wrapper .fieldset-cf7mls .cf7mls-btns button {
+        margin-bottom: 0; }
     #footerForm .fieldset-cf7mls-wrapper .fieldset-cf7mls:not(.cf7mls_current_fs) {
       display: none; }
   #footerForm .underline {
     border-bottom: 2px solid var(--secondary-color); }
   #footerForm .wpcf7 input {
     border: none;
-    border-radius: 5px 0 0 5px; }
+    border-radius: 5px 0 0 5px;
+    width: 100%; }
   #footerForm .wpcf7 button {
     border-radius: 0 5px 5px 0; }
   #footerForm .footer-form-close {
@@ -11174,8 +11178,11 @@ section.footer-navigation {
     align-items: center;
     justify-content: center;
     border-radius: 5px; }
-  #footerForm .wpcf7-not-valid-tip, #footerForm .wpcf7-response-output {
+  #footerForm .wpcf7-not-valid-tip,
+  #footerForm .wpcf7-response-output {
     color: var(--white-color); }
+  #footerForm .wpcf7-not-valid-tip {
+    position: absolute; }
 
 /*-----------------------------------------------------------------------------------*/
 /* Sections
