--- a/assets/stylesheets/sections/_footer.scss
+++ b/assets/stylesheets/sections/_footer.scss
@@ -65,6 +65,7 @@ section.footer-navigation {
 				width: 30%;
 				button {
 					margin-bottom: 0;
+					margin-top: 0;
 				}
 			}
 			&:not(.cf7mls_current_fs) {
