--- a/style.css
+++ b/style.css
@@ -11156,7 +11156,8 @@ section.footer-navigation {
       flex: 0 0 30%;
       width: 30%; }
       #footerForm .fieldset-cf7mls-wrapper .fieldset-cf7mls .cf7mls-btns button {
-        margin-bottom: 0; }
+        margin-bottom: 0;
+        margin-top: 0; }
     #footerForm .fieldset-cf7mls-wrapper .fieldset-cf7mls:not(.cf7mls_current_fs) {
       display: none; }
   #footerForm .underline {
