--- a/assets/stylesheets/sections/_sections.scss
+++ b/assets/stylesheets/sections/_sections.scss
@@ -501,3 +501,14 @@ section.the-content {
 		}
 	}
 }
+
+section.contact-form {
+	.contact-form-box {
+		label {
+			width: 100%;
+
+		}
+		input {
+		}
+	}
+}
