--- a/style.css
+++ b/style.css
@@ -11564,4 +11564,7 @@ section.the-content {
   section.the-content .container ol li:not(:last-child) {
     margin-bottom: 1rem; }
 
+section.contact-form .contact-form-box label {
+  width: 100%; }
+
 /*# sourceMappingURL=style.css.map */
