--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -45,7 +45,14 @@ p {
 a {
     text-decoration: none;
 }
-
+.wpcf7-submit.wpcf7-submit.wpcf7-submit {
+    @include button-style;
+    background-color: var(--accent-color);
+    color: var(--white-color);
+    @include on-event {
+        background-color: var(--secondary-color);
+    }
+}
 .button-box.button-box {
     @include button {
         @include button-style;
@@ -304,7 +311,6 @@ textarea {
             }
         }
 
-      
         @include responsive(md-lg) {
             @include before-after {
                 content: "";
