--- a/style.css
+++ b/style.css
@@ -11617,6 +11617,7 @@ section.contact-form .contact-form-box label {
 section.contact-form .contact-form-box input {
   width: 100%; }
 section.contact-form .contact-form-box textarea {
+  width: 100%;
   height: 100px; }
 
 /*# sourceMappingURL=style.css.map */
