--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -692,7 +692,7 @@ textarea {
     }
 }
 
-.contact-details {
+.contact-details-holder {
     p {
         a {
             color: var(--primary-color);
