--- a/assets/stylesheets/sections/_sections.scss
+++ b/assets/stylesheets/sections/_sections.scss
@@ -503,6 +503,9 @@ section.the-content {
 }
 
 section.contact-form {
+	h2 {
+		margin-bottom: 0;
+	}
 	.contact-form-box {
 		label {
 			width: 100%;
