--- a/style.css
+++ b/style.css
@@ -11612,14 +11612,16 @@ section.the-content {
   section.the-content .container ol li:not(:last-child) {
     margin-bottom: 1rem; }
 
-section.contact-form h2 {
-  margin-bottom: 0; }
-section.contact-form .contact-form-box label {
-  width: 100%; }
-section.contact-form .contact-form-box input {
-  width: 100%; }
-section.contact-form .contact-form-box textarea {
-  width: 100%;
-  height: 100px; }
+section.contact-form {
+  font-size: 18px; }
+  section.contact-form h2 {
+    margin-bottom: 0; }
+  section.contact-form .contact-form-box label {
+    width: 100%; }
+  section.contact-form .contact-form-box input {
+    width: 100%; }
+  section.contact-form .contact-form-box textarea {
+    width: 100%;
+    height: 100px; }
 
 /*# sourceMappingURL=style.css.map */
